Adopt upstream dev and fix five client side defects
Squashes origin/dev at 226a31c, 64 commits ahead of the previous v2.0.2 tree,
together with six commits of client side work on top of it.

Upstream brings the ContainerIO refactor, the multiversion NBT manager layer,
the fancytext package, and the client chest read/write lock rework. 40 files
are removed as part of those refactors; none of that is content loss, each
deletion traces to a file being split, renamed, or folded upstream.

The six local commits fix defects found by an adversarial review of that diff:

- The event editor OK button called get() on an empty Optional, because only
  the hover side was wired to the validator.
- Unrecognised style option tokens threw IllegalArgumentException out of the
  text parser.
- Custom RGB colors did not survive a stringify parse round trip, the ';'
  terminator was missing.
- [show_item] with an out of range slot and [font] with no value threw past
  their catches.
- The SaveQueue thread was not a daemon, so quitting the game could hang.
- ROADMAP.md scopes the remaining work and the 26.2 migration.

Compiles clean. Not yet exercised in game.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>